adding minor edits to the results

--- a/4.mss/main.tex
+++ b/4.mss/main.tex
@@ -133,7 +133,7 @@ To estimate pairwise interactions in diverse, horizontal systems such as those o
     \subsection{Realised interactions}
         
         \paragraph{}
-        Realised interactions are quantified by regressing the performance of an element  - a species, population or any chosen set of replicated units - against the abundance and identity of it's neighbouring elements in a neighbour-density dependent model (NDDM).  Increases or decreases in an overall elements' performance can thus be attributed to neighbouring elements which were observed to co-occur. 
+        Realised interactions are quantified by regressing the performance of an element  - a species, population or any chosen set of replicated units - against the abundance and identity of it's neighbouring elements in a neighbour-density dependent model (NDDM).  Increases or decreases in an overall element's performance can thus be attributed to neighbouring elements which were observed to co-occur. 
 
         \paragraph{}
         We implement a neighbour density-dependent model to each focal element $i$ which regresses the identity and abundance of neighbours $j$ ($j = 1, 2, 3, ..., S$) against the measured proxy for performance $P_{i}$ through a link function $f$:
@@ -143,7 +143,7 @@ To estimate pairwise interactions in diverse, horizontal systems such as those o
         \label{nddm}
         \end{equation}
         
-        The intercept $\beta_{i0}$ represents intrinsic performance, an elements' performance in the absence of interactions with neighbours. $N_{j}$ are the abundances of neighbours recorded for each observation, and the $\beta_{ij}$ captures the effect of each neighbour $j$ on $i$. Note that neighbours can include other members of element $i$, in which case intraspecific interactions are denoted as $\beta_{ii}$.
+        The intercept $\beta_{i0}$ represents intrinsic performance, an element's performance in the absence of interactions with neighbours. $N_{j}$ are the abundances of neighbours recorded for each observation, and the $\beta_{ij}$ captures the effect of each neighbour $j$ on $i$. Note that neighbours can include other members of element $i$, in which case intraspecific interactions are denoted as $\beta_{ii}$.
 
         \paragraph{}
         This model, as well as the RIM described below, are implemented as generalised linear models. This means that the relationship between $P_i$ and the right-hand side of the equation does not need to be linear, but can be modified to fit the data in question given an appropriate distribution and link function $f$, for example negative binomial and natural logarithm. 
@@ -151,7 +151,7 @@ To estimate pairwise interactions in diverse, horizontal systems such as those o
     \subsection{Unrealised interactions}
 
     \paragraph{}
-       A common issue in ecological datasets is that some elements may not be observed to co-occur with many neighbours, because data sampling is limited in space and time. The NDDM above will thus not be able to estimate all potential interactions ($\beta_{ij}$), especially for rare elements. These \textit{unrealised} interactions can be estimated by using an alternative model which assumes that elements typically have a singular impact on and a singular response to neighbours independent of neighbour identity (response and impact model, or RIM - see \cite{Godoy2014b}). An unrealised interaction is therefore the product of two elements' impact and response parameters. 
+       A common issue in ecological datasets is that some elements may not be observed to co-occur with many neighbours, because data sampling is limited in space and time. The NDDM above will thus not be able to estimate all potential interactions ($\beta_{ij}$), especially for rare elements. These \textit{unrealised} interactions can be estimated by using an alternative model which assumes that elements typically have a singular impact on and a singular response to neighbours independent of neighbour identity (response and impact model, or RIM - see \cite{Godoy2014b}). An unrealised interaction is therefore the product of two element's impact and response parameters. 
 
         \begin{equation}
         P_{i} = \beta_{i0} - r_{i} \sum_{j=1}^{S} e_{j} N_{j}
@@ -179,7 +179,7 @@ To estimate pairwise interactions in diverse, horizontal systems such as those o
         \label{LVform}
         \end{equation}
 
-        This reveals that our interaction terms can be rescaled into per-capita interaction strengths by dividing them by the recipient elements' intrinsic performance:  
+        This reveals that our interaction terms can be rescaled into per-capita interaction strengths by dividing them by the recipient element's intrinsic performance:  
 
         \begin{equation}
         {\beta_{ij}}'' = \frac{\beta_{ij}}{\beta_{i0}}
@@ -263,8 +263,11 @@ To estimate pairwise interactions in diverse, horizontal systems such as those o
     %\subsection{Case study results}
 
     \paragraph{}
-     For our case study, the resulting interaction matrix was non-symmetrical and included both positive (competitive) and negative (facilitative) values (Figure \ref{fig:netwks}. A \& B). Though competition was the dominant interaction type,  35\% of all focal x neighbour rescaled interactions were facilitative, as were 26 \% of all focal x focal interactions (averages across all network samples). As a result, 40\% of interactions between pairs of focal species were of opposing signs such that $i$ competes with $j$ but $j$ facilitates $i$. 
-     Furthermore, the elements of the diagonal (the effect of an element on itself) were able to be estimated, which can allow us to quantify how much a species regulates it's own performance. For 12 of our 22 focal species, the scaled distributions of these intraspecific effects did not overlap with 0, which suggests individuals of those species have a non-trivial effect on other individuals of the same species. Together, these features make the resulting interaction matrix qualitatively different to association networks, which are a common alternative to inferring interactions in diverse systems (Figure \ref{fig:netwks}. C). 
+     For our case study, the resulting interaction matrix was non-symmetrical and included both positive (competitive) and negative (facilitative) values (Figure \ref{fig:netwks}.A \& B). Though competition was the dominant interaction type,  35\% of all focal x neighbour interactions were facilitative, as were 26 \% of all focal x focal interactions (averages across all network samples). As a result, 40\% of interactions between pairs of focal species were of opposing signs such that $i$ competes with $j$ but $j$ facilitates $i$. [GIVE THE MEDIAN INSTEAD OF MEAN!]
+     Furthermore, the elements of the diagonal (the effect of an element on itself) were able to be estimated, which can allow us to quantify how much a species regulates it's own performance. For 12 of our 22 focal species, the scaled distributions of these intraspecific effects did not overlap with 0, which suggests individuals of those species have a non-trivial effect on other individuals of the same species [ADD proportion of intra interactions that had a facil vs comp median]. Together, these features make the resulting interaction matrix qualitatively different to association networks, which are a common alternative to inferring interactions in diverse systems (Figure \ref{fig:netwks}.C). 
+
+     \paragraph{}
+
 
 
        \begin{figure}[H]
@@ -285,17 +288,17 @@ To estimate pairwise interactions in diverse, horizontal systems such as those o
     We now illustrate potential uses of this framework by examining ecological questions important to species management and how the interaction matrix derived from our case study data may help us better understand the system in question. 
     We use three ecological questions to illustrate some of the ways in which our results may be useful to empirical and applied ecologists.
  
-    \subsubsection*{Do abundant natives under-regulate their population density compared to rarer natives?}
-    One hypothesis as to why certain plant species are more abundant than others is that they tend to compete with themselves less strongly than rare species \parencite{Yenni2012, Yenni2017}. Hypothetically, this release of intraspecific competition pressure allows them to reach much higher abundances than species which strongly compete with themselves. In Figure \ref{fig:species} A., we plot the strength of per-capita intraspecific interactions against the log abundance of a species in the field. Intraspecific interactions are at their weakest when close to $0$. The two most abundant native species \textit{Velleia rosea} (VERO) and \textit{Podolepsis canescens} (POCA) highlighted in purple fall very close to the median intraspecific interaction strength. This suggests that \textit{V. rosea} and \textit{P. canescens} do not reach high abundances through an under-regulation of their population density but by through other means (e.g. access to a larger environmental niche space). 
-
+    \subsubsection*{Do abundant natives under-regulate their population density compared to rarer native species?}
+    One hypothesis as to why certain plant species are more abundant than others is that they tend to compete with themselves less strongly than rare species \parencite{Yenni2012, Yenni2017}. Hypothetically, this release of intraspecific competition pressure allows them to reach much higher abundances than species which strongly compete with themselves. In Figure \ref{fig:species}.A, we plot the strength of per-capita intraspecific interactions against the log abundance of a species in the field. Intraspecific interactions are at their weakest when close to $0$. The two most abundant native species \textit{Velleia rosea} (VERO) and \textit{Podolepsis canescens} (POCA) highlighted in purple fall very close to the median intraspecific interaction strength. This suggests that \textit{V. rosea} and \textit{P. canescens} do not reach high abundances through an under-regulation of their population density but through other means (e.g. access to a larger niche space). 
+    [ADD You could note that no comparison with standard approaches is possible because existing methods don't allow for calculation of self regulation.  You send it before but maybe drive that novelty home. ] -> intraspecific effects
 
     \subsubsection*{Which species may be taking on keystone roles in the system?}
-    Keystone species have strong effects on the dynamics of the whole ecosystem, such that their exclusion from a community can create significant changes in species density and composition \parencite{Paine1969}. Furthermore, the impact of keystone species is disproportionately large relative to their abundance \parencite{Power1996, Piraino2002, Libralato2006}. The keystone species concept is  relevant to ecosystem management and conservation in helping identify species of particular importance for the safeguarding of a whole system \parencite{Soule2005a}. Though determining which species truly serve keystone roles can be a lengthy process, we can identify potential candidates by comparing a species impact on the population growth of other species to it's own abundance \parencite{Libralato2006}. Figure \ref{fig:species} B. highlights three native species in green which may be potential keystone species due to having strongly competitive or facilitative effects on the rest of the community overall, despite rather low abundances: \textit{Trachymene ornata} (TROR), \textit{Haloragis odontocarpa} (HAOD) and \textit{Gilberta tenuifolia} (GITE). 
+    Keystone species have strong effects on the dynamics of the whole ecosystem, such that their exclusion from a community can create significant changes in species density and composition \parencite{Paine1969}. Furthermore, the impact of keystone species is disproportionately large relative to their abundance \parencite{Power1996, Piraino2002, Libralato2006}. The keystone species concept is  relevant to ecosystem management and conservation in helping identify species of particular importance for the safeguarding of a whole system \parencite{Soule2005a}. Though determining which species truly serve keystone roles has historically involved extensive ecological experimentation \parencite{}, we can identify potential candidates by comparing a species' impact on the population growth of other species to it's own abundance \parencite{Libralato2006}. Figure \ref{fig:species}.B highlights three native species in green which may be potential keystone species due to having strongly competitive or facilitative effects on the rest of the community overall, despite rather low abundances: \textit{Trachymene ornata} (TROR), \textit{Haloragis odontocarpa} (HAOD) and \textit{Gilberta tenuifolia} (GITE). 
+    -> non-symmetry
 
-
-    \subsubsection*{Though exotic species are typically thought to compete with natives, there are also reports of facilitative exotics. Is this the case in our system?}
-    Though many invasive species compete with natives \parencite{Naeem2000, Corbin2004, Riley2008, Zheng2015}, several studies have found evidence of invasives facilitating natives, with cascading effects on other species and net positive effects on ecosystem processes \parencite{Rodriguez2006, Ramus2017}. By defining per-capita interaction strengths between species in a system, we can determine which exotics are harmful or beneficial to natives. Figure \ref{fig:species} C. plots the sum of a species competitive effects on neighbours against the sum of it's facilitative effects on neighbours. Exotic species are identified in red. \textit{Hypochaeris glabra} (HYPO) and \textit{Arctotheca calendula} (ARCA) both have a lower-than-median facilitative effect on neighbours but a higher-than-median competitive effect, these two species overall have a competitive effect on the native-dominated community. \textit{Pentameris aroides} (PEAI) on the other hand has a slightly lower-than-median competitive effect and higher-than-median facilitative effect: it competes more weakly and facilitates more strongly than the median species in the system. In this instance, \textit{P. aroides} is an exotic species which nevertheless facilitates some native species.
-
+    \subsubsection*{Do all exotic species compete with native species?}
+    Though many invasive species compete with natives \parencite{Naeem2000, Corbin2004, Riley2008, Zheng2015}, several studies have found evidence of invasives facilitating natives, with cascading effects on other species and net positive effects on ecosystem processes \parencite{Rodriguez2006, Ramus2017}. By defining per-capita interaction strengths between species in a system, we can determine which exotics are harmful or beneficial to natives. Figure \ref{fig:species} C. plots the sum of a species competitive effects on neighbours against the sum of it's facilitative effects on neighbours. Exotic species are identified in red. \textit{Hypochaeris glabra} (HYPO) and \textit{Arctotheca calendula} (ARCA) both have a lower-than-median facilitative effect on neighbours but a higher-than-median competitive effect, these two species overall have a competitive effect on the native-dominated community. \textit{Pentameris aroides} (PEAI) on the other hand has a slightly lower-than-median competitive effect and higher-than-median facilitative effect: it competes more weakly and facilitates more strongly than the median species in the system, regardless of whether they are native or exotic. In this instance, \textit{P. aroides} is an exotic species that facilitates some native species.
+    -> competitive and facilitative
 
 
     % \paragraph{}
@@ -313,8 +316,10 @@ To estimate pairwise interactions in diverse, horizontal systems such as those o
 
     \addtocounter{figure}{-1}
 	\begin{figure} [t!]
-  		\caption{(Previous page.) Understanding interaction effects can help identify species of particular ecological importance to a system. For all graphs, diamonds are species medians across all network samples, black lines cover the 50\% quantile and grey dots indicate the full range of out-strength values as calculated from 1000 sampled networks. Dashed lines represent the median value for focals. Coloured triangles indicate the species refered to in the main text for each of the ecological questions associated with (A), (B) and (C). \\
-        In (A), the x-axis shows the strength of intraspecific interactions, that is how strongly a focal species interacts with itself, plotted against a focal species' log abundance (y-axis). Values over $0$ indicate competition, and values below show facilitation.  The two most abundant natives, in purple, do not seem to compete with themselves any more or less strongly than the median for all species in the system (dashed line). (B) shows the sum of interaction effects of focal species on neighbours (x-axis) against its' log abundance (x-axis). On the x-axis, values over $0$ indicate that a focal species has an overall competitive effect on neighbours, and values below $0$ indicate that is has an overall facilitative effect. Green diamonds identify species with low abundance but strong competitive or facilitative effects on neighbours. (C) decomposes a focal species' net interaction effects into its' competitive effects (x-axis) and facilitative effects. Red diamonds show exotic species.}%missing
+  		\caption{(Previous page.) Understanding interaction effects can help identify species of particular ecological importance to a system. For all graphs, diamonds are species medians across all network samples, black lines cover the 50\% quantile and grey dots indicate the full range of out-strength values as calculated from 1000 sampled networks. Dashed lines represent the median value for all focals. Coloured triangles indicate the species refered to in the main text for each of the ecological questions associated with (A), (B) and (C). \\
+        In (A), the x-axis shows the strength of intraspecific interactions, that is how strongly a focal species interacts with itself, plotted against a focal species' log abundance (y-axis). Values over $0$ indicate competition, and values less than $0$ indicate facilitation.  The two most abundant natives, \textit{Velleia rosea} (VERO) and \textit{Podolepsis canescens} (POCA) in purple, do not seem to compete with themselves any more or less strongly than the median for all species in the system (dashed line). \\
+        (B) shows the sum of interaction effects of focal species on neighbours (x-axis) against the focal species' log abundance (x-axis). On the x-axis, values greater than $0$ indicate that a focal species has an overall competitive effect on neighbours, and values less than $0$ indicate that it has an overall facilitative effect. Green diamonds identify species with low abundance but strong competitive or facilitative effects on neighbours: \textit{Trachymene ornata} (TROR), \textit{Haloragis odontocarpa} (HAOD) and \textit{Gilberta tenuifolia} (GITE). \\
+        (C) decomposes a focal species' net interaction effects into its competitive effects (x-axis) and facilitative effects (y-axis). Red diamonds show the exotic species \textit{Hypochaeris glabra} (HYPO), \textit{Arctotheca calendula} (ARCA) and \textit{Pentameris aroides} (PEAI).} 
 	\end{figure}
 
 
